# TableStudio

./: ._.git  ._README.md  .gitignore  README.md  package-lock.json
.github/workflows/: pages.yml
landing-page/: README.md  metadata.json
landing-page/src/: App.tsx
landing-page/src/components/: Footer.tsx  Hero.tsx  Navbar.tsx
src/: App.tsx  index.css
src/components/: Downloads.tsx  Features.tsx  Footer.tsx  Hero.tsx  Navbar.tsx  Sources.tsx  Support.tsx  Technical.tsx
wavetable_designer/: .gitignore  Cargo.toml  LICENSE  README.md  bundler.toml  errors.txt  justfile
wavetable_designer/docs/: accelerators.md  architecture.md
wavetable_designer/src/: app_state.rs  dsp.rs  editor.rs  lib.rs  main.rs  widgets.rs
wavetable_designer/src/editor/: canvas.rs  grid.rs  mod.rs  preview.rs
